Added Level Scaling

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Audio, Graphics and Plugins folders
 Audio/
 Graphics/
-Plugins/
+Plugins/*
+!Plugins/Level Scaling/
 
 # Data folder, but not Data/Scripts folder or messages_core.dat
 Data/*
